REGRESSION (r126763): css1/pseudo/firstline.html fails when using the complex text code path https://bugs.webkit.org/show_bug.cgi?id=96890

Reviewed by Sam Weinig.

Source/WebCore: 

Test: fast/text/stale-TextLayout-from-first-line.html

When a first-line style specifies a font, different pieces of the same RednerText can be
laid out using different fonts, requiring a differet TextLayout for each piece.

* rendering/RenderBlock.h:
(RenderTextInfo): Added m_font data member.
* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::RenderTextInfo::RenderTextInfo): Added initializer for new data member.
(WebCore::RenderBlock::LineBreaker::nextLineBreak): Added code to update the text layout in
renderTextInfo if the font has changed.

LayoutTests: 

* fast/text/stale-TextLayout-from-first-line-expected.html: Added.
* fast/text/stale-TextLayout-from-first-line.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@128713 bbb929c8-8fbe-4397-9dbb-9b2b20218538