third_party/WebKit/Source/WebCore/rendering/RenderBlock.h
@@ -716,6 +716,7 @@ private:
         RenderText* m_text;
         OwnPtr<TextLayout> m_layout;
         LazyLineBreakIterator m_lineBreakIterator;
+        const Font* m_font;
     };
 
     class LineBreaker {
